resources/kanban.css
html,
body {
  background: #fff;
  border: 0;
  font-family: "SF Pro Display", helvetica, arial, sans-serif;
  font-size: 76%;
  height: 100%;
  margin: 0;
  max-height: 100%;
  overflow: hidden;
  padding: 0;
}

.outer-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

.header {
  background-image: linear-gradient(45deg, rgb(100, 50, 50), rgb(150, 50, 50));
  height: 8em;
}

.logo {
  height: 70px;
  height: 4.5em;
  margin: 15px;
  padding-top: 0.7em;
}

.onoffswitch {
  margin: 0;
  margin-right: 1em;
  padding: 0;
}

.sidebar-container {
  border-top: 0.5px solid #d7d9da;
  display: flex;
  flex-basis: auto;
  flex-grow: 1;
  height: 100%;
  width: 100%;
}

.sidebar {
  background-color: #f7f9fa;
  border-right: 0.5px solid #666;
  display: flex;
  flex-basis: auto;
  flex-direction: column;
  flex-grow: 1;
  padding: 1em;
  width: 200px;
}

.main-view-container {
  width: 100%;
}

.some-page-wrapper {
  height: 100%;
  padding: 0;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: 100%;
  width: 100%;
}

.inner-column {
  height: 100%;
}

.column {
  display: flex;
  flex: 1;
  flex-direction: column;
  height: 100%;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  overflow-x: hidden;
  padding: 0;
}

.stats {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  width: 100%;
}

.canvas {
  height: 100%;
  width: 100%;
}

.column-extra {
  border: 0;
  margin-right: 1.5em;
}

.column {
  -ms-overflow-style: none;
}

.column::-webkit-scrollbar {
  display: none;
}

.column:nth-child(even) {
  background: #eee;
}

.column:nth-child(odd) {
  background: #ddd;
}

.box {
  background-color: #fff;
  border-radius: 3px;
  box-shadow: 2px 2px #999;
  font-size: 12px;
  margin: 15px;
  padding: 10px;
  transition: background 0.3s ease-in-out;
  word-wrap: break-word;
}

.box:hover {
  background: #eee;
}

.h2 {
  color: white;
  font-size: 12px;
  margin: 0;
  padding: 15px;
}

.h2 .size {
  float: right;
  padding-right: 10px;
}

a {
  color: #333;
  text-decoration: none;
}

.area {
  border-radius: 0 0 3px 3px;
  margin: 10px -10px -10px -10px;
  padding: 5px 10px 5px 10px;
}

.hasProject {
  background-color: #8d8;
}

.hasNoProject {
  background-color: #ee8;
}

.hasDeadline {
  background-color: #e88;
}

.deadline {
  color: #999;
}

.color1 {
  background: #7862d9;
}

.color2 {
  background: #7a127a;
}

.color3 {
  background: #879aa4;
}

.color4 {
  background: #fc8e16;
}

.color5 {
  background: #2db4b2;
}

.color6 {
  background: #37c57a;
}

.color7 {
  background: #1297ff;
}

.color8 {
  background: #6278d9;
}

.active {
  background-color: #666;
  background-color: rgba(150, 150, 150, 0.3);
  border-radius: 2px;
}

.listHeader {
  font-weight: bold;
  margin-bottom: 0.2em;
  margin-top: 2em;
}

.sidelist {
  font-size: 12px;
  height: 100%;
  margin-left: 1em;
}

.sidelist:nth-child(odd) {
  background-color: transparent;
}

.sidelist ul {
  list-style: none;
  list-style-position: outside;
  margin: 0;
  padding-left: 1em;
}

.sidelist ul li {
  margin: 2px;
}

.sidelist li:before {
  content: "◉ ";
  margin: 0 0 0 -1.2em;
}

.eisenhower {
  display: grid;
  grid-template-areas:
    'Time Time'
    'A B'
    'C D';
  grid-template-columns: 50% 50%;
  grid-template-rows: 10em 50% 50%;
}

.eisenhower-inner {
  height: 100%;
  overflow: auto;
  overflow-x: hidden;
}

.Time {
  font-size:4em;
  grid-area: Time;
  text-align: center;
}

.A {
  background: #eee;
  grid-area: A;
  padding-bottom:5em;
}

.B {
  background: #ddd;
  grid-area: B;
  padding-bottom:5em;
}

.C {
  background: #eee;
  grid-area: C;
  padding-bottom:15em;
}

.D {
  background: #ddd;
  grid-area: D;
  padding-bottom:15em;
}


.loading {
  font-size: xx-large;
  position: absolute;
  text-align: center;
  top: 50%;
  vertical-align: middle;
  width: 100%;
}

.headselector {
  background-color: #333;
  border-bottom: 1px solid #999;
  border-top: 1px solid #999;
  color: white;
  font-size: 1em;
  height: 20px;
  margin-bottom: 1em;
  padding-top: 0.3em;
  text-align: center;
  width: 100%;
}

.headselector a {
  color: white;
  margin-left: 1em;
  margin-right: 1em;
}

.big-text {
  align-items: center;
  display: flex;
  font-size: 10em;
  height: 100%;
  justify-content: center;
  width: 100%;
}

/* ---------------------------------------- */
.onoffswitch {
  float: right;
  margin: 1em;
  margin-right: 3em;
  position: relative;
  top: 30px;
  width: 44px;
}

.onoffswitch {
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}

.onoffswitch-checkbox {
  display: none;
}

.onoffswitch-label {
  border: 1px solid #fff;
  border-radius: 16px;
  cursor: pointer;
  display: block;
  overflow: hidden;
}

.onoffswitch-inner {
  display: block;
  margin-left: -100%;
  transition: margin 0.3s ease-in 0s;
  width: 200%;
}

.onoffswitch-inner:before,
.onoffswitch-inner:after {
  box-sizing: border-box;
  color: white;
  display: block;
  float: left;
  font-size: 12px;
  font-weight: bold;
  height: 22px;
  line-height: 22px;
  padding: 0;
  width: 50%;
}

.onoffswitch-inner:before {
  background-color: transparent;
  color: #fff;
  content: "T";
  padding-left: 10px;
}

.onoffswitch-inner:after {
  background-color: transparent;
  color: #fff;
  content: "P";
  padding-right: 10px;
  text-align: right;
}

.onoffswitch-switch {
  background: #fff;
  border: 0.5px solid #999999;
  border-radius: 16px;
  bottom: 0;
  display: block;
  margin: 3px;
  position: absolute;
  right: 21px;
  top: 0;
  transition: all 0.3s ease-in 0s;
  width: 16px;
}

.onoffswitch-checkbox:checked+.onoffswitch-label .onoffswitch-inner {
  margin-left: 0;
}

.onoffswitch-checkbox:checked+.onoffswitch-label .onoffswitch-switch {
  right: 0;
}

.prefs {
  color: #444;
  margin: 1em;
  margin-left: 20em;
  margin-right: 20em;
}

.prefs .column {
  border: 1px solid black;
  border-radius: 5px;
  box-shadow: 2px 2px #999;
  margin: 1em;
  opacity: 0.85;
}

.pref-input {
  border: 1px solid black;
  padding: 3px;
}


/* ---------------------------------------- */

@media (prefers-color-scheme: dark) {

  html,
  body,
  .footer,
  .box,
  .canvas,
  .sidebar,
  .sidelist,
  .header {
    background-color: #111;
    color: #fff;
  }

  .sidebar-container,
  .canvas {
    background-color: #222;
  }

  .header {
    background-image: linear-gradient(45deg, rgb(50, 50, 50), rgb(30, 30, 30));
  }

  .box {
    box-shadow: 2px 2px #333;
    opacity: 0.85;
  }

  .box:hover {
    background: #666;
    opacity: 1;
  }

  .h2,
  a {
    color: #eee;
  }

  .bright {
    display: none;
  }

  .column:nth-child(even) {
    background: #444;
  }

  .column:nth-child(odd) {
    background: #333;
  }

  .sidelist:nth-child(odd) {
    background: transparent;
  }

  .hasProject {
    background-color: #393;
  }

  .hasNoProject {
    background-color: #993;
  }

  .hasDeadline {
    background-color: #933;
  }

  .color1 {
    background: #423085;
  }

  .color2 {
    background: #1c6c68;
  }

  .color3 {
    background: #4b585f;
  }

  .color4 {
    background: #9e500f;
  }

  .color5 {
    background: #420043;
  }

  .color6 {
    background: #217944;
  }

  .color7 {
    background: #0f54a3;
  }

  .color8 {
    background: #3248a9;
  }
}

